# videoink

./: .gitignore  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: providers.md  quickstart.md  skill.md
styles/: default.md  technical.md
tests/: test_fetch.py  test_full.py  test_generate.py  test_llm.py  test_transcribe.py
videoink/: __init__.py  cli.py  fetch.py  generate.py  transcribe.py
videoink/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
videoink/styles/: default.md  interview.md  newsletter.md  summary.md  technical.md
